// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders correctly 1`] = `
<DocumentFragment>
  .cache-1w87qjo {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #F6F6F8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-1rzsa5r {
  color: #4A4F62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div
    class="e1vt8sjg2 cache-1w87qjo"
  >
    <span
      aria-disabled="false"
      class="cache-1rzsa5r e1vt8sjg1"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders correctly bordered 1`] = `
<DocumentFragment>
  .cache-cjhxxl {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  border: 1px solid #D4DAE7;
}

.cache-1rzsa5r {
  color: #4A4F62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div
    class="e1vt8sjg2 cache-cjhxxl"
  >
    <span
      aria-disabled="false"
      class="cache-1rzsa5r e1vt8sjg1"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-fct0m5 {
  opacity: 0.5;
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #F6F6F8;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-1xguu1j {
  opacity: 0.5;
  color: #4A4F62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div
    class="e1vt8sjg2 cache-fct0m5"
  >
    <span
      aria-disabled="true"
      class="cache-1xguu1j e1vt8sjg1"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;
